# TurtlesTrading

./: .gitignore  LICENSE  README.md  pyproject.toml
src/turtlestrading/: turtle_poc.py
