[project]
name = "TurtlesTrading"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Eli-G3", email = "eli@vakrat.com"},
]
dependencies = ["requests>=2.32.4", "pandas>=2.0.3", "numpy>=1.24.4", "matplotlib>=3.7.5"]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
